--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -36,30 +36,36 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	
-<!-- 	
-	<context-param>
-		<param-name>logbackConfigLocation</param-name>
-		<param-value>classpath:conf/logback.xml</param-value>
-	</context-param>
-	<listener>
-		<listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>
-	</listener> -->
-	
-	<!-- springMVC核心配置 -->
+	<!-- smvc分发器声明，此处分发器会使用spring的注入 -->
 	<servlet>
-		<servlet-name>spring</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<servlet-name>smvc-dispatch</servlet-name>
+		<servlet-class>wang.moshu.smvc.framework.DispatchServlet</servlet-class>
+		<!-- 控制器扫描目录 -->
 		<init-param>
-			<param-name>contextConfigLocation</param-name>
-			<param-value>classpath:conf/spring-mvc.xml</param-value>
+			<param-name>scanPackage</param-name>
+			<param-value>wang.moshu</param-value>
+		</init-param>
+		<!-- 视图层目录前缀 -->
+		<init-param>
+			<param-name>viewPreffix</param-name>
+			<param-value>/pages/</param-value>
+		</init-param>
+		<!-- 视图层后缀 -->
+		<init-param>
+			<param-name>viewSuffix</param-name>
+			<param-value>.jsp</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
+	<!-- smvc分发路径定义，建议接口控制器使用/i/*路由，页面使用/p/*路由 -->
 	<servlet-mapping>
-		<servlet-name>spring</servlet-name>
-		<url-pattern>/</url-pattern>
+		<servlet-name>smvc-dispatch</servlet-name>
+		<url-pattern>/i/*</url-pattern>
 	</servlet-mapping>
-
+	<servlet-mapping>
+		<servlet-name>smvc-dispatch</servlet-name>
+		<url-pattern>/p/*</url-pattern>
+	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
