--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
 			<artifactId>smvc-framework</artifactId>
 			<version>0.0.1</version>
 		</dependency>
+
+        <dependency>
+            <groupId>wang.moshu</groupId>
+            <artifactId>mt-framework</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
@@ -95,11 +101,6 @@
 			<groupId>io.protostuff</groupId>
 			<artifactId>protostuff-runtime</artifactId>
 			<version>1.4.2</version>
-		</dependency>
-		<dependency>
-			<groupId>weimob.soa.sdp</groupId>
-			<artifactId>sdp-common</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
