--- a/src/main/resources/conf/redis.properties
+++ b/src/main/resources/conf/redis.properties
@@ -1,6 +1,8 @@
 #host address
-redis.init.host=127.0.0.1
-redis.init.psw=weimob123
+#redis.init.host=127.0.0.1
+#redis.init.psw=weimob123
+redis.init.host=123.206.202.189
+redis.init.psw=moshuwang2016
 
 #redis server port
 redis.init.port=6379
@@ -18,4 +20,3 @@ redis.init.minIdle=0
 redis.init.maxWaitMillis=1000
 #is test borrow connection form pool
 redis.init.testOnBorrow=true
-redis.keyPrefix=_DEV
