--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
         <dependency>
             <groupId>wang.moshu</groupId>
             <artifactId>mt-framework</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.1</version>
         </dependency>
 		<dependency>
 			<groupId>redis.clients</groupId>
