--- a/src/main/resources/conf/jdbc.properties
+++ b/src/main/resources/conf/jdbc.properties
@@ -1,8 +1,4 @@
 jdbc_driverClassName=com.mysql.jdbc.Driver
-jdbc_url=jdbc:mysql://localhost:3306/moshu?useUnicode=true&amp;characterEncoding=utf8
+jdbc_url=jdbc:mysql://localhost:3306/miaosha?useUnicode=true&amp;characterEncoding=utf8
 jdbc_username=root
 jdbc_password=111111
-
-#jdbc_url=jdbc:mysql://123.206.202.189:3306/moshu2?useUnicode=true&amp;characterEncoding=utf8
-#jdbc_username=root
-#jdbc_password=moshuwang2016
