--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
 	<!-- 读取spring配置文件 -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:conf/spring-mybatis.xml</param-value>
+		<param-value>classpath:conf/spring-context.xml</param-value>
 	</context-param>
 	
 	<listener>
