--- a/src/main/resources/conf/redis.properties
+++ b/src/main/resources/conf/redis.properties
@@ -1,8 +1,10 @@
 #host address
-#redis.init.host=127.0.0.1
+redis.init.host=127.0.0.1
+redis.init.psw=weimob123
+#redis.init.host=192.168.1.101
 #redis.init.psw=weimob123
-redis.init.host=123.206.202.189
-redis.init.psw=moshuwang2016
+#redis.init.host=123.206.202.189
+#redis.init.psw=moshuwang2016
 
 #redis server port
 redis.init.port=6379
@@ -12,11 +14,11 @@ redis.init.DB=8
 #connection timeout
 redis.init.timeout=100000
 #redis max connection 
-redis.init.maxTotal=5
+redis.init.maxTotal=4000
 #redis max idle
-redis.init.maxIdle=5
-redis.init.minIdle=0
+redis.init.maxIdle=4000
+redis.init.minIdle=4000
 #connection max wait time
-redis.init.maxWaitMillis=1000
+redis.init.maxWaitMillis=20
 #is test borrow connection form pool
-redis.init.testOnBorrow=true
+redis.init.testOnBorrow=false
