--- a/pom.xml
+++ b/pom.xml
@@ -102,5 +102,15 @@
 			<artifactId>protostuff-runtime</artifactId>
 			<version>1.4.2</version>
 		</dependency>
+		    <dependency>
+    	<groupId>javax.servlet</groupId>
+    	<artifactId>jstl</artifactId>
+    	<version>1.2</version>
+    </dependency>
+    <dependency>
+    	<groupId>taglibs</groupId>
+    	<artifactId>standard</artifactId>
+    	<version>1.1.2</version>
+    </dependency>
 	</dependencies>
 </project>
