--- a/src/main/resources/conf/redis.properties
+++ b/src/main/resources/conf/redis.properties
@@ -1,6 +1,6 @@
 #host address
 redis.init.host=127.0.0.1
-redis.init.psw=weimob123
+redis.init.psw=
 #redis.init.host=192.168.1.101
 #redis.init.psw=weimob123
 #redis.init.host=123.206.202.189
